UI - Progress bar fixes

--- a/eg/templates/index.html
+++ b/eg/templates/index.html
@@ -14,8 +14,10 @@
     <div class="content" style="color: #fbfcfd; position:absolute; top:50%; left:8%; transform:translatey(-50%);z-index:2">
       <small style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif">Welcome, {{user.first_name}}<small>
       <h1 style="font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;font-size:80px;margin: 10px 0 30px; line-height:80px">Get Swole or <br>Die Trying</h1>
-      <a class="btn" href="/exercise" role="button" style="color: #fbfcfd; padding: 10px 25px; background: transparent; border: 1px solid #fff; border-radius: 20px; outline: none; cursor: pointer">Let's Get Started</a>
+      <a class="btn" href="/exercise" role="button" style="color: #fbfcfd; padding: 10px 25px; background: transparent; border: 1px solid #fff; border-radius: 20px; outline: none; cursor: pointer">Input Exercise</a>
+        <a class="btn" href="/view_profile" role="button" style="color: #fbfcfd; padding: 10px 25px; background: transparent; border: 1px solid #fff; border-radius: 20px; outline: none; cursor: pointer">View Profile</a>
     </div>
+
   
   
 
