--- a/eg/templates/our-music-choice.html
+++ b/eg/templates/our-music-choice.html
@@ -12,7 +12,7 @@
     <li class="media">
     <img src="{{song.album.images.0.url}}" class="rounded-circle" style="max-width:10%; margin-right: 10px" alt="">
       <div class="media-body">
-        <h5 style ="background-color:orange;">{{song.name}}</h5>
+        <h5 style ="background-color:lightgreen;">{{song.name}}</h5>
         <div class="list-group-item"><a href='{{song.preview_url}}'><button type="button"
             class="btn btn-dark  mt-1">PLAY SONG</button></a></div>
       </div>
