--- a/eg/templates/create_user_profile_page.html
+++ b/eg/templates/create_user_profile_page.html
@@ -1,15 +1,15 @@
 {%extends 'base.html'%}
-{% block title %} Create A New Profile{%endblock%}
+{% block title %} {%endblock%}
 {% load static%}
 
 {% block content %}
 {% load socialaccount %}
 
 {% if user.is_authenticated %}
-    <h1> Create Profile Page...</h1>
+    <h1 style="margin-bottom: 25px;margin-left: 36px; font-size: 100px; color: #fbfcfd; text-align:center; font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif"> Create Profile Page...</h1>
     <br/><br/>
 
-    <div class = "form-group">
+    <div class = "form-group" style="color: #fbfcfd;">
         <form method = "POST" enctype="multipart/form-data">
         {% csrf_token %}
         
