--- a/eg/templates/our-music-choice.html
+++ b/eg/templates/our-music-choice.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <h1 style="font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; font-size:100px; color: #fbfcfd; text-align:center">LIFTING TYPE BEATS</h1>
-<h4 style="color: #fbfcfd; text-align:center">Listen to these hot artists and get inspired!</h4>
+<h4 style="color: #fbfcfd; text-align:center">Listen to our Favorite Artist of the Month and Get Active!</h4>
 
 {% if results %}
 <div class="container bg-dark p-2">
