--- a/eg/templates/progress.html
+++ b/eg/templates/progress.html
@@ -35,7 +35,7 @@
         <p> Gold Trophy Earned <img src="{% static 'eg/images/gold.png' %}" width="150" height="150"></p>
         {% endif %}
         <a class="btn" href="/exercise" role="button" style="color: #fbfcfd; padding: 10px 25px; background: transparent; border: 1px solid #fff; border-radius: 20px; outline: none; cursor: pointer">add another exercise?</a>
-        <a class="btn" href="/" role="button" style="color: #fbfcfd; padding: 10px 25px; background: transparent; border: 1px solid #fff; border-radius: 20px; outline: none; cursor: pointer">go back to the index page</a>
+        <a class="btn" href="/" role="button" style="color: #fbfcfd; padding: 10px 25px; background: transparent; border: 1px solid #fff; border-radius: 20px; outline: none; cursor: pointer">go back to home</a>
     </ul>
 </div>
 
