--- a/eg/templates/view_own_profile.html
+++ b/eg/templates/view_own_profile.html
@@ -7,78 +7,75 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 {% load static %}
 
-<h1 style="color:white"> User Profile</h1>
-<h1 style="margin-bottom: 25px;margin-left: 36px; font-size: 100px; color: #fbfcfd; text-align:center; font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif">Current Level of user: {{level}}</h1>
 
 <blockquote class="blockquote text-center">
     {% if profile_info %}
+    <h1 style="margin-bottom: 25px;margin-left: 36px; font-size: 100px; color: #fbfcfd; text-align:center; font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif">Your Current Level: {{level}}</h1>
     <ul>
         {% for profile in profile_info %}
-        <div class="card mb-3">
-            <div class = "row no-gutters">
-              <div class = "col-md-2">
-                {%if user.profile.profile_pic.url%}
-                <img class="card-img-top" src="{{profile.profile_pic.url}}" class = "rounded-circle" alt="Card image cap">
-                {% else %}
-                <!-- <img class="card-img-top" src="{% static 'eg/images/blue-box.jpg' %}" class = "rounded-circle" alt="Card image cap"> -->
-                <img class="card-img-top" src="{% static 'eg/images/default_image.png' %}" class = "rounded-circle" alt="Card image cap">
-                {%endif%}
-                </div>
-                <div class= "col-md-10">
-                  <div class="card-body">
-                    <h5 class="card-title">{{profile.user.username}}</h5>
-                      <p class="card-text">{{profile.bio}}</p>
-                      <p class="card-text"><small class = "text-muted"> Born {{profile.date_of_birth}}</small></p>
+        <div class="container">
+            {%if profile.profile_pic.url%}
+              <img src="{{profile.profile_pic.url}}" alt="" style="width:300px;height:300px;" class="ui-w-100 rounded-circle">
+            {%else%}
+            <img src="{% static '/exgame/images/default_image.png' %}" style="width:300px;height:300px;" class = "rounded-circle" alt="Card image cap">
+            {%endif%}
 
-                      <!-- <a href="{% url 'profile_view' profile.user.id %} " class="btn btn-primary">Visit Profile</a>  -->
-                      <!-- ^^^In the future this should take you to their public facing profile page -->
-                      </div>
-                      </div>
-            </div>
-          </div>
+            <p style="color:#fbfcfd; margin: 15px 15px">Joined {{profile.user.date_joined}}</p>
+            <h5 style="margin: 15px 15px; color: #fbfcfd; ">{{profile.bio}}</h5>
+        </div>
 
-        <p class="text-left" style="color:white">Progress:</p>
+<div class = "container" style = "color:#fbfcfd">
+  <p class="text-left" style = "font-size:40px; font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; margin-bottom:-0.20rem">PROGRESS:</p>
+  <p class="text-left" style ="font-style:italic">You have made {{progress_percentage}} % progress towards the next level</p>
+</div>
     </ul>
 </blockquote>
-            <img src="{% static 'eg/images/grey-box.png' %}" class="outline" width="1000" height="100" style="margin-left: 39px">
-            <img src="{% static 'eg/images/blue-box.jpg' %}" class="bar" width="{{progress}}" height="100" style="margin-left: 39px">
+<ul>
+     <img src="{% static 'eg/images/grey-box.png' %}" class="outline" width="1000" height="100" style="margin-left: 14px">
+     <img src="{% static 'eg/images/blue-box.jpg' %}" class="bar" width="{{progress}}" height="100" style="margin-left: 14px">
+    <style>
+          .bar
+           {
+             position: relative
+           }
+           .outline
+           {
+             position: absolute
+           }
 
-        <style>
-            .bar
-            {
-                position: relative
-            }
-            .outline
-            {
-                position: absolute
-            }
-
-        </style>
+    </style>
+</ul>
 <blockquote class="blockquote text-center">
     <ul>
-        <p class="text-left" style="color:white"> Your Exercise history:</p>
-        {% if exercise_list %}
-        {% for exercise, exercise_count in exercises.items %}
-        <p class="text-left" style="color:white">You have done the exercise "{{exercise}}" {{exercise_count}} times</p>
-        {% endfor %}
-        {% else %}
-        <p class="text-left" style="color:white"> No history yet</p>
-        {% endif %}
-        <p class="text-left" style="color:white"> You have made {{progress_percentage}} % progress towards the next level</p>
-        {% if level > 0 %}
-        <p class="text-left" style="color:white">Bronze Trophy Earned <img src="{% static 'eg/images/bronze.png' %}" width="150" height="150"></p>
-        {% endif %}
-        {% if level > 1 %}
-        <p class="text-left" style="color:white"> Silver Trophy Earned <img src="{% static 'eg/images/silver.png' %}" width="150" height="150"></p>
-        {% endif %}
-        {% if level > 2 %}
-        <p class="text-left" style="color:white"> Gold Trophy Earned <img src="{% static 'eg/images/gold.png' %}" width="150" height="150"></p>
-        {% endif %}
-        {% endfor %}
-        <p><a class="btn" href="/" role="button" style="color: #fbfcfd; padding: 10px 25px; background: transparent; border: 1px solid #fff; border-radius: 20px; outline: none; cursor: pointer">go back to index</a></p>
-    </ul>
+ <div class = "container" style = "color:#fbfcfd">
+
+  <p class="text-left" style="font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; font-size:40px">TROPHIES EARNED:</p>
+  {% if level > 0 %}
+  <p class="text-left">Bronze Trophy Earned <img src="{% static 'eg/images/bronze.png' %}" width="150" height="150"></p>
+  {% endif %}
+  {% if level > 1 %}
+  <p class="text-left"> Silver Trophy Earned <img src="{% static 'eg/images/silver.png' %}" width="150" height="150"></p>
+  {% endif %}
+  {% if level > 2 %}
+  <p class="text-left"> Gold Trophy Earned <img src="{% static 'eg/images/gold.png' %}" width="150" height="150"></p>
+  {% endif %}
+  {% endfor %}
+  <p class="text-left" style = "font-size:40px; font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;"> Your Exercise History:</p>
+  {% if exercise_list %}
+  {% for exercise, exercise_count in exercises.items %}
+  <p class="text-left">You have done the exercise "{{exercise}}" {{exercise_count}} times</p>
+  {% endfor %}
+  {% else %}
+  <p class="text-left"> No history yet</p>
+  {% endif %}
+</div>
+
+<a class="btn" href="/" role="button" style="color: #fbfcfd; padding: 10px 25px; background: transparent; border: 1px solid #fff; border-radius: 20px; outline: none; cursor: pointer">go back to home</a>
+        
+</ul>
 </blockquote>
 {% else %}
-<a class="btn" href="/create_profile_page" role="button" style="color: #fbfcfd; padding: 10px 25px; background: transparent; border: 1px solid #fff; border-radius: 20px; outline: none; cursor: pointer">Create Your Profile!</a>
+<p>No such profile exists</p>
+<a class="btn" href="/create_profile_page" role="button" style="color: #fbfcfd; padding: 10px 25px; background: transparent; border: 1px solid #fff; border-radius: 20px; outline: none; cursor: pointer">Create a Profile</a>
 {% endif %}
 {% endblock content %}
