--- a/eg/templates/progress.html
+++ b/eg/templates/progress.html
@@ -22,7 +22,7 @@
             }
 
         </style>
-
+        <div style="color: white;">
         <p>{{user.username}}, you have made {{progress_percentage}} % progress towards the next level</p>
         <p>Your level is {{level}}</p>
         {% if level > 0 %}
@@ -37,6 +37,7 @@
         <a class="btn" href="/exercise" role="button" style="color: #fbfcfd; padding: 10px 25px; background: transparent; border: 1px solid #fff; border-radius: 20px; outline: none; cursor: pointer">add another exercise?</a>
         <a class="btn" href="/" role="button" style="color: #fbfcfd; padding: 10px 25px; background: transparent; border: 1px solid #fff; border-radius: 20px; outline: none; cursor: pointer">go back to home</a>
     </ul>
+</div>
 </div>
 
 {% endblock %}
